<resources>
    <string name="main_app_name">Veloid</string>
    <string name="main_hour_date_format_prefix">At</string>
    <string name="main_hour_date_format">h:mm:ss a</string>
    <string name="main_last_update_not_done">No update</string>
    <string name="main_update_progress_dialog_title">Process running</string>
    <string name="main_update_progress_dialog_station_updating">The list of the stations is currently updating.
        This action may
        take time</string>
    <string name="main_update_station_list">Do you really want to update the stations list
        (this action may
        take time and WIFI connection is recommended)?
	</string>
    <string name="main_nb_stations_grabbed_for_network">stations stored for the network</string>
    <string name="main_update_station_list_after_chage">
        It\'s the first time you use this network.\nDo you want to update
        the
        stations list (this action may take time) ?
    </string>
    <string name="main_updating_favorite">
        Please wait while getting availabilities for your favorites.
	</string>
    <string name="main_favorite_header_bikes">Bikes</string>
    <string name="main_favorite_header_slots">Slots</string>
    <string name="main_bar_i_want">I am searching for</string>
    <string name="main_bar_bikes_1">1 bike</string>
    <string name="main_bar_bikes_2">2 bikes</string>
    <string name="main_bar_bikes_3">3 bikes</string>
    <string name="main_bar_bikes_4">4 bikes</string>
    <string name="main_bar_bikes_5">5 bikes</string>
    <string name="main_bar_slots_1">1 slot</string>
    <string name="main_bar_slots_2">2 slots</string>
    <string name="main_bar_slots_3">3 slots</string>
    <string name="main_bar_slots_4">4 slots</string>
    <string name="main_bar_slots_5">5 slots</string>
    <string name="main_bar_btn_esbikes_title">Bikes\nnearby?</string>
    <string name="main_bar_btn_esslots_title">Slots\nnearby?</string>
    <string name="main_bar_btn_refresh_title">Refresh</string>
    <string name="main_bar_btn_advanced_title">Favorites\n/Timer</string>
    <string name="main_bar_advanced_add_fav">Add a favorite</string>
    <string name="main_bar_advanced_del_fav">Remove a favorite</string>
    <string name="main_bar_advanced_filtered_geolocation">Bikes AND slots?</string>
    <string name="main_bar_advanced_timer">Timer</string>
    <string name="main_bar_advanced_title">Other actions</string>
    <string name="menu_station_returned">Stations returned:</string>
    <string name="menu_max_station_scanned">Max stations scanned:</string>
    <string name="menu_update_station_list">Update stations list</string>
    <string name="menu_notification">Notifications</string>
    <string name="menu_network">Bike network:</string>
    <string name="menu_about">About...</string>
    <string name="si_free_slots">Free slots</string>
    <string name="si_available_bikes">Available bikes</string>
    <string name="new_station_s1_title">Favorites</string>
    <string name="new_station_s1_sub_title">Add a new favorite</string>
    <string name="new_station_s1_part_info_label">Partial information about the searched
        station (address,
        number, ...)</string>
    <string name="new_station_s1_part_address_label">Or near the address</string>
    <string name="new_station_s1_activate_filter_cb">Activate filter (valid only for addresses)
	</string>
    <string name="new_station_s1_filter_min_slot_lbl">Minimum number of free slot(s)</string>
    <string name="new_station_s1_filter_min_avb_lbl">Minimum number of available bike(s)</string>
    <string name="new_station_s2_title">Matching stations</string>
    <string name="new_station_s2_selection_no_station_found_label">No stations found, please retry. You entered :
	</string>
    <string name="nearest_station_gm_title">Nearest stations</string>
    <string name="nearest_station_gm__popup_no_address_found_title">Error</string>
    <string name="nearest_station_gm__popup_no_address_found_label">The entered address does not match any
        coordonnates, please
        retry.</string>
    <string name="nearest_station_popup_no_address_found_btn">Enter a new address</string>
    <string name="nearest_station_popup_favorite_added">Favorite added</string>
    <string name="nearest_station_info_available_bike_prefix_lbl">Bikes:</string>
    <string name="nearest_station_info_freeslots_prefix_lbl">Slots:</string>
    <string name="nearest_station_progress_dialog_wait">Please wait</string>
    <string name="nearest_station_filter_info_header">Filter:</string>
    <string name="nearest_station_filter_info_av_bikes">bikes:</string>
    <string name="nearest_station_filter_info_free_slots">- slots:</string>
    <string name="nearest_station_filter_info_not_filtered">n/a</string>
    <string name="nearest_station_location_providers_broken">Unable to use you location providers (GPS or
        else). Please
        check their status before retry</string>
    <string name="nearest_station_warning_dialog_several_addresses">Please clarify the address</string>
    <string name="nearest_station_button_refresh">Refresh data \non map</string>
    <string name="nearest_station_button_recenter_from_map">Use curent \nmap center</string>
    <string name="nearest_station_button_geoloc">Geolocation</string>
    <string name="del_station_title">Favorites</string>
    <string name="del_station_sub_title">Remove a favorite</string>
    <string name="del_station_warning_message">Are you sure you want to delete that favorite
	</string>
    <string name="del_station_warning_yes_btn">Yes</string>
    <string name="del_station_warning_no_btn">No</string>
    <string name="timer_set_title">Timer</string>
    <string name="timer_set_subtitle">Set the timer</string>
    <string name="timer_set_timer_label">Minutes before alarm:</string>
    <string name="timer_set_geolocalize_at_end">Geolocalisation after timeout
	</string>
    <string name="timer_set_activate_filter_cb">Activate filter</string>
    <string name="timer_run_title">Timer</string>
    <string name="timer_run_subtitle">Timer running</string>
    <string name="timer_run_remaining_lbl">Remaining minutes:</string>
    <string name="timer_run_filter_free_slot_lbl">Slots filter:</string>
    <string name="timer_run_filter_av_bike_lbl">Bikes filter:</string>
    <string name="timer_run_filter_not_filtered">Not filtered</string>
    <string name="timer_run_geoloc_lbl">Geolocalization:</string>
    <string name="timer_run_activated">Yes</string>
    <string name="timer_run_not_activated">No</string>
    <string name="timer_service_started">Veloid timer started</string>
    <string name="timer_service_stopped">Veloid timer stopped</string>
    <string name="timer_service_notification_title">Veloid timer</string>
    <string name="timer_service_notification_subtitle_stop">Timer stopped.</string>
    <string name="timer_service_notification_subtitle_running">Timer is currently running</string>
    <string name="timer_run_popup_timer_ends">Timer ends!</string>
    <string name="timer_run_popup_geolocate">Timer ends! You are about to be geolocated.
	</string>
    <string name="error_title">Error</string>
    <string name="error_enter_numerical_value">Enter numerical value</string>
    <string name="dialog_value_saved">The value has been saved</string>
    <string name="dialog_btn_ok">OK</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="error_no_internet_connection">No internet connection ! Please check your
        network</string>
    <string name="quick_start_title">Quick start guide</string>
    <string name="quick_start_message">
        Do you want to read a quick start guide ? It may help you using
        Veloid
        depending on the kind of user you are. This action opens a web
        brower.
	</string>
    <string name="specific_action_nextbike">Rent/Return a bike in the Nextbike
        network (open a web
        browser)</string>
    <string name="specific_action_nextbike_url_de">https://nextbike.net/m/
	</string>
    <string name="about_done_by">Application made by</string>
    <string name="about_cyril_gervais">Cyril Gervais (contact@veloid.com)</string>
    <string name="about_version">Veloid</string>
    <string name="about_info">Please consult the website
        http://www.veloid.fr for more
        information, update, bug report,
        suggestion ...etc</string>
    <string name="dialog_notify_set_LED_cb_lbl">LED</string>
    <string name="dialog_notify_set_vibration_cb_lbl">Vibration</string>
    <string name="dialog_notify_set_sound_cb_lbl">Sound</string>
    <string name="dialog_search_ringtone_btn_play_play">Play</string>
    <string name="pref_algo_category_title">Filter algorithm</string>
    <string name="pref_displayed_title">Displayed stations</string>
    <string name="pref_displayed_subtitle">Number of stations to be displayed on the map
        screen
	</string>
    <string name="pref_scanned_title">Scanned stations</string>
    <string name="pref_scanned_subtitle">Number of stations scanned to fit the filter,
        on the map
        screen</string>
    <string name="pref_network_category_title">Bike network</string>
    <string name="pref_network_title">Bike network</string>
    <string name="pref_network_subtitle">Select a network to work on</string>
    <string name="pref_network_dialog_title">Select a network</string>
    <string name="pref_notif_category_title">Timer notifications</string>
    <string name="pref_notif_led_title">LED</string>
    <string name="pref_notif_led_subtitle"></string>
    <string name="pref_notif_sound_title">Sound</string>
    <string name="pref_notif_sound_subtitle_no_ringtone">Silent mode</string>
    <string name="pref_notif_sound_subtitle_default_ringtone">Default ringtone</string>
    <string name="pref_notif_sound_subtitle_custom_ringtone">Custom: </string>
    <string name="pref_notif_sound_select_ringtone_browse">Browse ...</string>
    <string name="pref_notif_vibra_title">Vibration</string>
    <string name="pref_notif_vibra_subtitle"></string>
    <string name="pref_update_all_station_category_title">Stations list</string>
    <string name="pref_update_all_station_title">Click here</string>
    <string name="pref_update_all_station_subtitle">to update the station list for the selected
        network</string>
    <string name="pref_delete_all_station_category_title">Clear stations</string>
    <string name="pref_delete_all_station_title">Click here</string>
    <string name="pref_delete_all_station_subtitle">to delete all stations from the current network
	</string>
    <string name="pref_about_category_title">About</string>
    <string name="pref_about_title">Information</string>
    <string name="remove">Remove</string>
    <string name="new_favorite_title">New favorite</string>
    <string name="new_favorite_explanation">Enter any information (even partial) related to the favorite you are searching for:</string>
    <string name="new_favorite_explanation_footer">
        Note: You can also add favorites directly from the map
    </string>
    <string name="new_favorite_valid_search">Search</string>
    <string name="remove_favorite_title">Delete a favorite</string>
    <string name="remove_favorite_select_in_list">Select the favorite to remove and click \"Remove\": </string>
    <string name="stop_timer">Stop the timer</string>
    <string name="pref_startup_category_title">Startup options</string>
    <string name="pref_startup_starttab_title">Tab on startup</string>
    <string name="pref_startup_starttab_subtitle">Select the tab displayed at startup
    </string>
    <string name="pref_favorites_category_title">Favorites</string>
    <string name="pref_favorites_sortbycolor_title">Sort by colors</string>
    <string name="pref_favorites_sortbycolor_subitle">The sort order can\'t be changed (green, blue, pink, orange)</string>
</resources>