<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@color/list_top_color"
	android:id="@+id/dialog_notify_main">

	<LinearLayout
		android:id="@+id/select_location_provider_container"
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1"		
		android:gravity="left|center_vertical"
		>

        <CheckBox
			android:id="@+id/dialog_notify_set_LED_cb"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/dialog_notify_set_LED_cb_lbl" />
            
        <CheckBox
            android:id="@+id/dialog_notify_set_vibration_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_notify_set_vibration_cb_lbl" />
            
        <CheckBox
            android:id="@+id/dialog_notify_set_sound_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_notify_set_sound_cb_lbl" />
                
                
	</LinearLayout>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="@color/list_bottom_color"
		android:gravity="center_horizontal|center_vertical">

		<ImageButton
			android:id="@+id/dialog_notify_btn_valid"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"			
			android:src="@drawable/ok" />

		<ImageButton
			android:id="@+id/dialog_notify_btn_cancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"			
			android:src="@drawable/cancel" />
	</LinearLayout>
</LinearLayout>