<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    
<!--     <TextView-->
<!--        android:id="@+id/network_name"-->
<!--        android:layout_width="fill_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:textColor="@color/favorite_text_color"-->
<!--        android:background="@drawable/header_titre" -->
<!--        android:gravity="right|center_vertical"-->
<!--        android:textSize="20px"-->
<!--        android:paddingRight="5px"-->
<!--        android:layout_marginBottom="3px"/>-->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/remove_favorite_title"
            android:textSize="30px"
            android:textStyle="bold"
            android:textColor="@color/title_txt_color"
            android:paddingBottom="20px"
            android:gravity="right" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20px"
            android:textStyle="bold"
            android:paddingBottom="20px"
            android:text="@string/remove_favorite_select_in_list" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:id="@+id/errorMessage" />



    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:layout_weight="1">
        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/removeFavoriteStationRadioGroup"
            >
        </RadioGroup>
    </ScrollView>

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1"
        android:gravity="bottom">
        <TableRow>
            <Button
                android:id="@+id/btnValidateRemoveFavorite"
                android:text="@string/remove"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20px"
                android:textStyle="bold" />
            <Button
                android:id="@+id/btnCancelRemoveFavorite"
                android:text="@string/dialog_btn_cancel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20px"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>


</LinearLayout>